--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
   <div id="app">
     <h1>Hej</h1>
+    <p>hejsaaaaaan</p>
 
   </div>
   <script type="module" src="/src/main.js"></script>
