--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
   <div id="app">
     <h1>Hej</h1>
     <p>hejsaaaaaan</p>
+    <p>fdsdfsdf</p>
+
+    <p>SKAPA KONFLIKTER</p>
 
   </div>
   <script type="module" src="/src/main.js"></script>
