ändrat i html till hejsan

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <div id="app">
     <h1>Hej</h1>
-    <p>hejsaaaaaan</p>
+    <p>hejsan</p>
 
   </div>
   <script type="module" src="/src/main.js"></script>
