--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <p>hejsan</p>
     <p>hejsaaaaaan</p>
     <p>Då</p>
+    <p>hejsvejs</p>
 
   </div>
   <script type="module" src="/src/main.js"></script>
