--- a/index.html
+++ b/index.html
@@ -1,23 +1,21 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Vite + Vue</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Vite + Vue</title>
-</head>
-
-<body>
-  <div id="app">
-    <h1>Hej</h1>
-    <p>hejsan</p>
-    <p>hejsaaaaaan</p>
-    <p>Då</p>
-    <p>hejsvejs</p>
-
-  </div>
-  <script type="module" src="/src/main.js"></script>
-</body>
-
+  <body>
+    <div id="app">
+      <h1>Hej</h1>
+      <p>hejsan</p>
+      <p>hejsaaaaaan</p>
+      <p>Då</p>
+      <p>hejsvejs</p>
+      <p>hallå där</p>
+    </div>
+    <script type="module" src="/src/main.js"></script>
+  </body>
 </html>
