--- a/index.html
+++ b/index.html
@@ -7,17 +7,8 @@
     <title>Vite + Vue</title>
   </head>
 
-<body>
-  <div id="app">
-    <h1>Hej</h1>
-    <p>hejsan</p>
-    <p>hejsaaaaaan</p>
-    <p>fdsdfsdf</p>
-
-    <p>SKAPA KONFLIKTER</p>
-
-  </div>
-  <script type="module" src="/src/main.js"></script>
-</body>
-
+  <body>
+    <div id="app"></div>
+    <script type="module" src="/src/main.js"></script>
+  </body>
 </html>
